[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Object/Mine_explosive_model.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0.396078, 0.898039, 0.87451, 0.215686 )

[node name="Mine_explosive_model" type="MeshInstance" groups=["No_collision"]]
mesh = SubResource( 2 )
script = ExtResource( 1 )

[node name="Area_detection" type="Area" parent="."]

[node name="Area_detection_collision" type="CollisionShape" parent="Area_detection"]
shape = SubResource( 1 )

[node name="Range_detection" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[connection signal="body_entered" from="Area_detection" to="." method="_on_Area_detection_body_entered"]
